--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ Temporary Items
 .Trash-*
 
 # Ignore all modules except the default modules.
+!/modules
 !/modules/**
 !/modules/default
 !/modules/default/**
