--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ lib-cov
 coverage
 .lock-wscript
 build/Release
-!/node_modules/**/*
-!fonts/node_modules/**/*
-!vendor/node_modules/**/*
-!/tests/node_modules/**/*
+/node_modules/**/*
+fonts/node_modules/**/*
+vendor/node_modules/**/*
+/tests/node_modules/**/*
 jspm_modules
 .npm
 .node_repl_history
@@ -59,14 +59,14 @@ Temporary Items
 .Trash-*
 
 # Ignore all modules except the default modules.
-!/modules
-!/modules/**
-!/modules/default
-!/modules/default/**
-!/modules/README.md**
+#!/modules
+#!/modules/**
+#!/modules/default
+#!/modules/default/**
+#!/modules/README.md**
 
 # Ignore changes to the custom css files.
-/css/custom.css
+#/css/custom.css
 
 # Vim
 ## swap
