--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,11 @@ Temporary Items
 .Trash-*
 
 # Ignore all modules except the default modules.
-#!/modules
-#!/modules/**
-#!/modules/default
-#!/modules/default/**
-#!/modules/README.md**
+!/modules/*
+!/modules/MMM-MyScoreboard/**
+!/modules/default
+!/modules/default/**
+!/modules/README.md**
 
 # Ignore changes to the custom css files.
 #/css/custom.css
